--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:ci": "npm test && npm run lint -- --list-different",
     "lint": "prettier --write --single-quote src/*.js",
     "preversion": "npm test",
-    "postversion": "git push && git push --tags && npm publish"
+    "postversion": "git push --follow-tags && npm publish"
   },
   "dependencies": {
     "semver": "^5.3.0"
