--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 
 node_js:
+  - 12
   - 10
-  - 8
-  - 6
 
 script:
   - npm run test:ci
 
-notifications:
-  email: false
+branches:
+  only:
+    - master
