--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/Siilwyn/semver-level-harmony.git"
   },
   "author": "Selwyn <talk@selwyn.cc> (https://selwyn.cc/)",
-  "license": "GPL-3.0+",
+  "license": "ISC",
   "keywords": [
     "semver",
     "level",
